<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/location"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/location"
        android:imeOptions="actionSearch"
        android:inputType="text"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/current_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_location"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/sunrise"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location" />

    <TextView
        android:id="@+id/latitude_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/latitude"
        android:textSize="14sp"
        android:textStyle="italic"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/current_location"
        app:layout_constraintStart_toStartOf="@id/current_location"/>

    <TextView
        android:id="@+id/latitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/latitude"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginStart="40dp"
        app:layout_constraintStart_toEndOf="@id/latitude_title"
        app:layout_constraintTop_toTopOf="@id/latitude_title"/>

    <TextView
        android:id="@+id/longitude_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/longitude"
        android:textSize="14sp"
        android:textStyle="italic"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/latitude_title"
        app:layout_constraintStart_toStartOf="@id/latitude_title"/>

    <TextView
        android:id="@+id/longitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/longitude"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginStart="40dp"
        app:layout_constraintStart_toEndOf="@id/latitude_title"
        app:layout_constraintTop_toTopOf="@id/longitude_title"/>


    <ImageView
        android:id="@+id/sunrise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/sunrise"
        android:layout_marginStart="30dp"
        android:layout_marginTop="300dp"
        app:layout_constraintTop_toBottomOf="@id/location"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/sunrise_time" />

    <TextView
        android:id="@+id/rise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sunrise_time"
        android:textStyle="italic"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/sunrise"
        app:layout_constraintTop_toBottomOf="@id/sunrise" />

    <TextView
        android:id="@+id/sunrisetime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textStyle="bold"
        android:text="@string/sunrise_time"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rise" />

    <ImageView
        android:id="@+id/sunset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/sunset"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="300dp"
        app:layout_constraintTop_toBottomOf="@id/location"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/sunset_time" />

    <TextView
        android:id="@+id/set"
        android:text="@string/sunset_time"
        android:textStyle="italic"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/sunset"
        app:layout_constraintTop_toBottomOf="@id/sunset"/>

    <TextView
        android:id="@+id/sunsettime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/sunset_time"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/set" />

</android.support.constraint.ConstraintLayout>